# CHIP-8

./: readme.md
CHIP-8/src/: chip-8.cpp  chip-8.hpp
linux_emulator/: CMakeLists.txt  main.cpp
windows_emulator/: CMakeLists.txt  main.cpp
